collecting supla measurments